--- a/Areas/Room/Views/Room/ViewRoom.cshtml
+++ b/Areas/Room/Views/Room/ViewRoom.cshtml
@@ -22,7 +22,9 @@
                 </div>
                 <div class="row">
                     <div class="col-md-4">
-                        <p><strong>Time Contract:</strong></p>
+                        <p><strong>Time Contract:</strong>
+                            @ViewBag.ContractStartDate - @ViewBag.ContractEndDate
+                        </p>
                     </div>
                     <div class="col-md-4">
                         <p><strong>Room Price: </strong>@Model.Price</p>
@@ -33,7 +35,7 @@
                 </div>
                 <div class="row">
                     <div class="col-md-12">
-                        <p class="text-justify"><strong>Description:</strong> @Model.Description</p>
+                        <p class="text-justify"><strong>Description: </strong>@Html.Raw(Model.Description)</p>
                     </div>
                 </div>
 
@@ -86,7 +88,15 @@
                                                     <tr>
                                                         <td>@index</td>
                                                         <td>@tenant.FullName</td>
-                                                        <td>@tenant.Sex.ToString()</td>
+
+                                                        @if (tenant.Sex)
+                                                        {
+                                                            <td>Female</td>
+                                                        }
+                                                        else
+                                                        {
+                                                            <td>Male</td>
+                                                        }
                                                         <td>@(tenant.Birthday.HasValue ?
                                                                 tenant.Birthday.Value.ToString("dd/MM/yyyy") : "N/A")</td>
                                                         <td>
