--- a/Views/Shared/_Layout.cshtml
+++ b/Views/Shared/_Layout.cshtml
@@ -63,237 +63,36 @@
                 </div>
                 <div class="header-right">
                     <ul class="clearfix">
-                        <li class="icons dropdown">
-                            <a href="javascript:void(0)" data-toggle="dropdown">
-                                <i class="mdi mdi-email-outline"></i>
-                                <span class="badge gradient-1 badge-pill badge-primary">3</span>
-                            </a>
-                            <div class="drop-down animated fadeIn dropdown-menu">
-                                <div class="dropdown-content-heading d-flex justify-content-between">
-                                    <span class="">3 New Messages</span>
-
-                                </div>
-                                <div class="dropdown-content-body">
-                                    <ul>
-                                        <li class="notification-unread">
-                                            <a href="javascript:void()">
-                                                <img class="float-left mr-3 avatar-img" src="../images/avatar/1.jpg"
-                                                    alt="">
-                                                <div class="notification-content">
-                                                    <div class="notification-heading">Saiful Islam</div>
-                                                    <div class="notification-timestamp">08 Hours ago</div>
-                                                    <div class="notification-text">Hi Teddy, Just wanted to let you ...
-                                                    </div>
-                                                </div>
-                                            </a>
-                                        </li>
-                                        <li class="notification-unread">
-                                            <a href="javascript:void()">
-                                                <img class="float-left mr-3 avatar-img" src="../images/avatar/2.jpg"
-                                                    alt="">
-                                                <div class="notification-content">
-                                                    <div class="notification-heading">Adam Smith</div>
-                                                    <div class="notification-timestamp">08 Hours ago</div>
-                                                    <div class="notification-text">Can you do me a favour?</div>
-                                                </div>
-                                            </a>
-                                        </li>
-                                        <li>
-                                            <a href="javascript:void()">
-                                                <img class="float-left mr-3 avatar-img" src="../images/avatar/3.jpg"
-                                                    alt="">
-                                                <div class="notification-content">
-                                                    <div class="notification-heading">Barak Obama</div>
-                                                    <div class="notification-timestamp">08 Hours ago</div>
-                                                    <div class="notification-text">Hi Teddy, Just wanted to let you ...
-                                                    </div>
-                                                </div>
-                                            </a>
-                                        </li>
-                                        <li>
-                                            <a href="javascript:void()">
-                                                <img class="float-left mr-3 avatar-img" src="../images/avatar/4.jpg"
-                                                    alt="">
-                                                <div class="notification-content">
-                                                    <div class="notification-heading">Hilari Clinton</div>
-                                                    <div class="notification-timestamp">08 Hours ago</div>
-                                                    <div class="notification-text">Hello</div>
-                                                </div>
-                                            </a>
-                                        </li>
-                                    </ul>
-
-                                </div>
-                            </div>
-                        </li>
+                        @* Message *@
+                        <partial name="_Message" />
+                        @* <partial name="_Notification" /> *@
                         <li class="icons dropdown">
                             <a href="javascript:void(0)" data-toggle="dropdown">
                                 <i class="mdi mdi-bell-outline"></i>
-                                <span class="badge badge-pill gradient-2 badge-primary">3</span>
+                                <span class="badge badge-pill gradient-2 badge-primary" id="notification-count">0</span>
                             </a>
                             <div class="drop-down animated fadeIn dropdown-menu dropdown-notfication">
                                 <div class="dropdown-content-heading d-flex justify-content-between">
-                                    <span class="">2 New Notifications</span>
-
+                                    <span id="notification-title">No new notifications</span>
                                 </div>
                                 <div class="dropdown-content-body">
-                                    <ul>
-                                        <li>
-                                            <a href="javascript:void()">
-                                                <span class="mr-3 avatar-icon bg-success-lighten-2"><i
-                                                        class="icon-present"></i></span>
-                                                <div class="notification-content">
-                                                    <h6 class="notification-heading">Events near you</h6>
-                                                    <span class="notification-text">Within next 5 days</span>
-                                                </div>
-                                            </a>
-                                        </li>
-                                        <li>
-                                            <a href="javascript:void()">
-                                                <span class="mr-3 avatar-icon bg-danger-lighten-2"><i
-                                                        class="icon-present"></i></span>
-                                                <div class="notification-content">
-                                                    <h6 class="notification-heading">Event Started</h6>
-                                                    <span class="notification-text">One hour ago</span>
-                                                </div>
-                                            </a>
-                                        </li>
-                                        <li>
-                                            <a href="javascript:void()">
-                                                <span class="mr-3 avatar-icon bg-success-lighten-2"><i
-                                                        class="icon-present"></i></span>
-                                                <div class="notification-content">
-                                                    <h6 class="notification-heading">Event Ended Successfully</h6>
-                                                    <span class="notification-text">One hour ago</span>
-                                                </div>
-                                            </a>
-                                        </li>
-                                        <li>
-                                            <a href="javascript:void()">
-                                                <span class="mr-3 avatar-icon bg-danger-lighten-2"><i
-                                                        class="icon-present"></i></span>
-                                                <div class="notification-content">
-                                                    <h6 class="notification-heading">Events to Join</h6>
-                                                    <span class="notification-text">After two days</span>
-                                                </div>
-                                            </a>
-                                        </li>
-                                    </ul>
-
-                                </div>
-                            </div>
-                        </li>
-                        <li class="icons dropdown d-none d-md-flex">
-                            <a href="javascript:void(0)" class="log-user" data-toggle="dropdown">
-                                <span>English</span> <i class="fa fa-angle-down f-s-14" aria-hidden="true"></i>
-                            </a>
-                            <div class="drop-down dropdown-language animated fadeIn  dropdown-menu">
-                                <div class="dropdown-content-body">
-                                    <ul>
-                                        <li><a href="javascript:void()">English</a></li>
-                                        <li><a href="javascript:void()">Dutch</a></li>
+                                    <ul id="notification-layout">
+                                        <!-- Thông báo sẽ được chèn vào đây từ AJAX -->
                                     </ul>
                                 </div>
                             </div>
                         </li>
-                        <li class="icons dropdown">
-                            <div class="user-img c-pointer position-relative" data-toggle="dropdown">
-                                <span class="activity active"></span>
-                                <img src="../images/user/1.png" height="40" width="40" alt="">
-                            </div>
-                            <div class="drop-down dropdown-profile   dropdown-menu">
-                                <div class="dropdown-content-body">
-                                    <ul>
-                                        <li>
-                                            <a href="app-profile.html"><i class="icon-user"></i>
-                                                <span>Profile</span></a>
-                                        </li>
-                                        <li>
-                                            <a href="email-inbox.html"><i class="icon-envelope-open"></i>
-                                                <span>Inbox</span>
-                                                <div class="badge gradient-3 badge-pill badge-primary">3</div>
-                                            </a>
-                                        </li>
-
-                                        <hr class="my-2">
-                                        <li>
-                                            <a href="page-lock.html"><i class="icon-lock"></i> <span>Lock
-                                                    Screen</span></a>
-                                        </li>
-                                        <li><a asp-action="Logout" asp-controller="Login" asp-area="Account"><i
-                                                    class="icon-key"></i>
-                                                <span>Logout</span></a>
-                                        </li>
-                                    </ul>
-                                </div>
-                            </div>
-                        </li>
+                        @* Language *@
+                        <partial name="_Language" />
+                        @* Profile *@
+                        <partial name="_Profile" />
                     </ul>
                 </div>
             </div>
         </div>
 
         @* Sidebar part *@
-        <div class="nk-sidebar">
-            <div class="nk-nav-scroll">
-                <ul class="metismenu" id="menu">
-                    @* <li class="nav-label">Dashboard</li> *@
-                    <li>
-                        <a asp-area="DashBoard" asp-action="Index" asp-controller="DashBoard">
-                            <i class="icon-speedometer menu-icon"></i><span class="nav-text">Dashboard</span> </a>
-                    </li>
-                    <li>
-                        <a class="has-arrow" href="javascript:void()" aria-expanded="false">
-                            <i class="fab fa-blogger"></i><span class="nav-text">Blog</span>
-                        </a>
-                        <ul aria-expanded="false">
-                            <li>
-                                <a asp-area="Blog" asp-action="Index" asp-controller="News">
-                                    News Blog
-                                </a>
-                            </li>
-                            <li>
-                                <a asp-area="Blog" asp-action="Index" asp-controller="ServicesBlog">
-                                    Services Blog
-                                </a>
-                            </li>
-                        </ul>
-                    </li>
-                    <li>
-                        <a asp-area="Room" asp-action="Index" asp-controller="Room">
-                            <i class="icon-home menu-icon"></i><span class="nav-text">Room</span>
-                        </a>
-                    </li>
-                    <li>
-                        <a asp-area="Tenant" asp-action="Index" asp-controller="Tenant">
-                            <i class="icon-user menu-icon"></i><span class="nav-text">Tenant</span>
-                        </a>
-                    </li>
-                    <li>
-                        <a asp-area="Contract" asp-action="Index" asp-controller="Contract">
-                            <i class="fa fa-file menu-icon white-icon" aria-hidden="true"></i><span
-                                class="nav-text">Contract</span>
-                        </a>
-                    </li>
-                    <li>
-                        <a asp-area="InvoiceAndPayment" asp-action="Index" asp-controller="Invoice">
-                            <i class="icon-credit-card menu-icon"></i><span class="nav-text">Payment</span>
-                        </a>
-                    </li>
-                    <li>
-                        <a asp-area="MaintenanceAndIncident" asp-action="Index" asp-controller="MaintenanceAndIncident">
-                            <i class="icon-wrench menu-icon"></i><span class="nav-text">Maintenance And Incident</span>
-                        </a>
-                    </li>
-                    <li>
-                        <a asp-area="AssetAndEquipment" asp-action="Index" asp-controller="AssetAndEquipment">
-                            <i class="fas fa-tools menu-icon"></i><span class="nav-text">Asset And Equipment</span>
-                        </a>
-                    </li>
-                </ul>
-
-            </div>
-        </div>
+        <partial name="_SideBar" />
 
         @* Cotent boday part *@
         <div class="content-body">
@@ -301,14 +100,7 @@
         </div>
 
         @* Footer part *@
-        <div class="footer">
-            <div class="copyright">
-                <p>Copyright &copy; Designed & Developed by
-                    <a href="https://themeforest.net/user/quixlab">
-                        Bao Ngo Le Gia</a> 2024
-                </p>
-            </div>
-        </div>
+        <partial name="_Footer" />
     </div>
 
     @* Embled code Javascript *@
@@ -317,33 +109,29 @@
     <script src="../js/settings.js"></script>
     <script src="../js/gleek.js"></script>
     <script src="../js/styleSwitcher.js"></script>
+    <script src="../js/general/notification.js"></script>
 
     @* Embled code other Javascript with content*@
     @RenderSection("AdditionalLinkJavascript", required: false)
 
     @* Script is used to defined layout *@
-    <script>
-        (function ($) {
-            "use strict"
-            new quixSettings({
-                version: "light",
-                layout: "vertical",
-                navheaderBg: "color_1",
-                headerBg: "color_1",
-                sidebarStyle: "full",
-                sidebarBg: "color_1",
-                sidebarPosition: "static",
-                headerPosition: "fixed",
-                containerLayout: "wide",
-                direction: "ltr"
-            });
-        })(jQuery);
-    </script>
-
-
-
-
-
+    @* <script>
+    (function ($) {
+    "use strict"
+    new quixSettings({
+    version: "light",
+    layout: "vertical",
+    navheaderBg: "color_1",
+    headerBg: "color_1",
+    sidebarStyle: "full",
+    sidebarBg: "color_1",
+    sidebarPosition: "static",
+    headerPosition: "fixed",
+    containerLayout: "wide",
+    direction: "ltr"
+    });
+    })(jQuery);
+    </script> *@
 </body>
 
 </html>
