feat: Service Room and Detail Service Room

--- a/Areas/Introduction/Views/HomePage/Home.cshtml
+++ b/Areas/Introduction/Views/HomePage/Home.cshtml
@@ -5,10 +5,8 @@
                 <div class="col-lg-7">
                     <nav class="main-menu">
                         <ul>
-                            <li class="active"><a href="./index.html">Trang chủ</a></li>
-                            <li><a href="./property.html">Nhà trọ, phòng trọ</a></li>
-                            @* <li><a href="./about-us.html">Nhà riêng</a></li>
-                                <li><a href="./blog.html">Căn hộ chung cư</a></li> *@
+                            <li class="active"><a href="/">Trang chủ</a></li>
+                            <li><a asp-action="RoomService" asp-controller="HomePage">Nhà trọ, phòng trọ</a></li>
                             <li><a asp-action="VideoReview" asp-controller="HomePage">Video Review </a></li>
                             <li><a asp-action="Blog" asp-controller="HomePage">News</a></li>
                         </ul>
