--- a/Areas/Introduction/Views/HomePage/VideoReview.cshtml
+++ b/Areas/Introduction/Views/HomePage/VideoReview.cshtml
@@ -6,7 +6,7 @@
                     <nav class="main-menu">
                         <ul>
                             <li><a asp-action="Home" asp-controller="HomePage">Trang chủ</a></li>
-                            <li><a href="./property.html">Nhà trọ, phòng trọ</a></li>
+                            <li><a asp-action="RoomService" asp-controller="HomePage">Nhà trọ, phòng trọ</a></li>
                             <li class="active"><a asp-action="VideoReview" asp-controller="HomePage">Video Review </a>
                             </li>
                             <li><a asp-action="Blog" asp-controller="HomePage">News</a></li>
