fix: Change title for pages

--- a/Areas/Introduction/Views/HomePage/Single.cshtml
+++ b/Areas/Introduction/Views/HomePage/Single.cshtml
@@ -1,4 +1,7 @@
 @model App.Models.NewsModel.ContentNews
+@{
+    ViewData["Title"] = "Chi tiết Bài Viết";
+}
 <header class="header-section">
     <div class="top-nav">
         <div class="container">
