--- a/Areas/Room/Views/Room/CreateHome.cshtml
+++ b/Areas/Room/Views/Room/CreateHome.cshtml
@@ -1,4 +1,7 @@
 @model App.Models.RentalProperty
+@{
+    ViewData["Title"] = "Add Rental Property";
+}
 <div class="container-fluid">
     <div class="row">
         <div class="col-lg-12">
