--- a/Views/Shared/_IntroductionLayout.cshtml
+++ b/Views/Shared/_IntroductionLayout.cshtml
@@ -3,11 +3,13 @@
 
 <head>
     <meta charset="UTF-8">
-    <meta name="description" content="Azenta Template">
-    <meta name="keywords" content="Azenta, unica, creative, html">
+    <meta name="description"
+        content="Website cho thuê phòng trọ giá rẻ tại các thành phố lớn Việt Nam. Tìm phòng trọ phù hợp với nhu cầu của bạn.">
+    <meta name="keywords"
+        content="cho thuê phòng trọ, phòng trọ giá rẻ, phòng trọ Hồ Chí Minh, phòng trọ Hà Nội, phòng trọ Đà Nẵng, phòng trọ Cần Thơ, phòng trọ Nha Trang, thuê phòng trọ">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title>Azenta | Template</title>
+    <title>@ViewData["Title"]</title>
 
     <!-- Google Font -->
     <link href="https://fonts.googleapis.com/css?family=Poppins:300,400,500,600,700,800,900&display=swap"
