--- a/Areas/Introduction/Views/HomePage/RoomService.cshtml
+++ b/Areas/Introduction/Views/HomePage/RoomService.cshtml
@@ -1,3 +1,6 @@
+@{
+    ViewData["Title"] = "Room Service";
+}
 <header class="header-section">
     <div class="top-nav">
         <div class="container">
