--- a/Areas/Introduction/Views/HomePage/VideoReview.cshtml
+++ b/Areas/Introduction/Views/HomePage/VideoReview.cshtml
@@ -1,3 +1,6 @@
+@{
+    ViewData["Title"] = "Video Review";
+}
 <header class="header-section">
     <div class="top-nav">
         <div class="container">
