--- a/Areas/Room/Views/Room/CreateRoom.cshtml
+++ b/Areas/Room/Views/Room/CreateRoom.cshtml
@@ -1,4 +1,7 @@
 @model App.Models.Room
+@{
+    ViewData["Title"] = "Add Room";
+}
 <div class="container-fluid">
     <div class="row">
         <div class="col-lg-12">
