--- a/Areas/Room/Views/Room/EditHome.cshtml
+++ b/Areas/Room/Views/Room/EditHome.cshtml
@@ -1,3 +1,6 @@
+@{
+    ViewData["Title"] = "Update Rental Property";
+}
 @model App.Models.RentalProperty
 <div class="container-fluid">
     <div class="row">
@@ -11,6 +14,7 @@
                         <form asp-action="EditHome" method="POST" asp-route-id="@Model.Id"
                             enctype="multipart/form-data">
                             @Html.ValidationSummary(true, "", new { @class = "text-danger" })
+                            using Microsoft.EntityFrameworkCore.Metadata.Internal;
                             <div class="form-row">
                                 <div class="form-group col-md-6">
                                     @Html.LabelFor(m => m.PropertyName, new { @class = "control-label" })
