--- a/Areas/Tenant/Views/Tenant/CreateTenant.cshtml
+++ b/Areas/Tenant/Views/Tenant/CreateTenant.cshtml
@@ -1,15 +1,17 @@
 ﻿@model App.Models.AppUser
-
+@{
+    ViewData["Title"] = "Create Tenant";
+}
 <div class="container-fluid">
     <div class="row justify-content-center">
         <div class="col-lg-12">
             <div class="card">
                 <div class="card-body">
-                    <h2 class="text-center lh-base mb-4">Edit Tenant</h2>
+                    <h2 class="text-center lh-base mb-4">Create New Tenant</h2>
                     <partial name="_SuccessMessage" />
                     <partial name="_FailureMessage" />
                     <div class="form-validation">
-                        <form asp-action="EditTenant" method="post">
+                        <form asp-action="CreateTenant" method="post">
                             <!-- Identity Card -->
                             @Html.ValidationSummary(true, "", new { @class = "text-danger" })
                             <div class="form-group row">
@@ -117,7 +119,7 @@
                                     </div>
                                     <div class="col-12 col-md-4 mb-3">
                                         <button type="submit" class="btn btn-dark btn-lg w-100">
-                                            Update Tenant
+                                            Create Tenant
                                         </button>
                                     </div>
                                 </div>
