--- a/Areas/Tenant/Views/Tenant/EditTenant.cshtml
+++ b/Areas/Tenant/Views/Tenant/EditTenant.cshtml
@@ -1,4 +1,7 @@
 ﻿@model App.Models.AppUser
+@{
+    ViewData["Title"] = "Update Tenant";
+}
 <div class="container-fluid">
     <div class="row justify-content-center">
         <div class="col-lg-12">
@@ -11,6 +14,7 @@
                         <form asp-action="EditTenant" method="POST" asp-controller="Tenant" asp-area="Tenant" asp-route-id="@Model.Id">
                             <!-- Identity Card -->
                              @Html.ValidationSummary(true, "", new { @class = "text-danger" })
+    using Microsoft.EntityFrameworkCore.Metadata.Internal;
                             <div class="form-group row">
                                 @Html.LabelFor(m => m.IdentityCard, new { @class = "col-lg-4 col-form-label" })
                                 <div class="col-lg-6">
