--- a/Areas/Blog/Views/News/EditNews.cshtml
+++ b/Areas/Blog/Views/News/EditNews.cshtml
@@ -5,7 +5,7 @@
             <div class="card">
                 <div class="card-body">
                     <div class="default-tab">
-                        <form asp-action="CreateNews" method="post" enctype="multipart/form-data">
+                        <form asp-action="EditNews" method="post" enctype="multipart/form-data">
                             @Html.AntiForgeryToken() <!-- CSRF protection -->
                             <ul class="nav nav-tabs mb-3" role="tablist">
                                 <li class="nav-item">
@@ -21,7 +21,7 @@
                                         <div class="basic-form">
                                             <div class="form-group row">
                                                 @* @Html.LabelFor(m => m.ImageId, new { @class = "control-label" }) *@
-                                                <label class="col-sm-2 col-form-label">Upload File</label>
+                                                <label class="col-sm-2 col-form-label">Upload Image</label>
                                                 <div class="col-sm-10">
                                                     <div class="input-group mb-3">
                                                         <div class="custom-file">
@@ -37,6 +37,12 @@
                                                                 id="fileLabel">Choose file</label>
                                                         </div>
                                                     </div>
+                                                </div>
+                                                <label class="col-sm-2 col-form-label">Current Image</label>
+                                                <div class="col-sm-10">
+                                                    <img class=""
+                                                        src="https://imbfaeyswkneestptfkr.supabase.co/storage/v1/object/public/news_img/@Model.ImageId"
+                                                        alt="A description of the image" width="200">
                                                 </div>
                                             </div>
                                             <div class="form-group row">
@@ -88,6 +94,7 @@
                                             </div>
                                         </div>
                                     </div>
+
                                 </div>
                                 <div class="tab-pane fade" id="profile">
                                     <div class="basic-form">
@@ -143,7 +150,7 @@
 </div>
 
 @section AdditionalLinkCSS {
-    <link href="../../../plugins/summernote/dist/summernote.css" rel="stylesheet">
+    <link href="../../plugins/summernote/dist/summernote.css" rel="stylesheet">
     <style>
         .note-frame {
             border-color: #ced4da !important;
