--- a/Areas/Blog/Views/News/EditNews.cshtml
+++ b/Areas/Blog/Views/News/EditNews.cshtml
@@ -1,3 +1,6 @@
+@{
+    ViewData["Title"] = "Update News";
+}
 @model App.Models.NewsModel.ContentNews
 <div class="container-fluid">
     <div class="row">
@@ -6,7 +9,7 @@
                 <div class="card-body">
                     <div class="default-tab">
                         <form asp-action="EditNews" method="post" enctype="multipart/form-data">
-                            @Html.AntiForgeryToken() <!-- CSRF protection -->
+                            @Html.AntiForgeryToken()
                             <ul class="nav nav-tabs mb-3" role="tablist">
                                 <li class="nav-item">
                                     <a class="nav-link active" data-toggle="tab" href="#general">General Information</a>
@@ -88,7 +91,7 @@
                                                 <label class="col-sm-2 col-form-label"></label>
                                                 <div class="col-sm-10">
                                                     <button type="submit" class="btn btn-dark">Finish</button>
-                                                    <a href="@Url.Action("Index", "YourController")"
+                                                    <a asp-action="Index" asp-controller="News" asp-area="Blog"
                                                         class="btn btn-light">Exit</a>
                                                 </div>
                                             </div>
@@ -134,7 +137,7 @@
                                             <label class="col-sm-2 col-form-label"></label>
                                             <div class="col-sm-10">
                                                 <button type="submit" class="btn btn-dark">Finish</button>
-                                                <a href="@Url.Action("Index", "YourController")"
+                                                <a asp-action="Index" asp-controller="News" asp-area="Blog"
                                                     class="btn btn-light">Exit</a>
                                             </div>
                                         </div>
