--- a/Areas/Blog/Views/News/Index.cshtml
+++ b/Areas/Blog/Views/News/Index.cshtml
@@ -1,3 +1,6 @@
+@{
+    ViewData["Title"] = "News Management";
+}
 <div class="container-fluid">
     <div class="col-12 mb-30">
         <div class="row">
@@ -8,13 +11,13 @@
                             <div class="status-info mb-2">
                                 <select id="news-status" class="form-select input-height" style="text-align: center;"
                                     aria-label="Choose status news">
-                                    <option value="all">All News</option>
-                                    <option value="public">Public</option>
-                                    <option value="private">Private</option>
+                                    <option value="all">All</option>
+                                    <option value="public">Show</option>
+                                    <option value="private">Hide</option>
                                 </select>
                                 <!-- Room Number Field -->
                                 <input class="input-height input-room" type="text" id="room-number"
-                                    placeholder="Enter news name" aria-label="Nhập số phòng">
+                                    placeholder="Enter service news" aria-label="Nhập số phòng">
                                 <!-- Search Button -->
                                 <a href="#" class="btn btn-primary btn-custom me-2">
                                     <i class="fas fa-search"></i>
@@ -68,7 +71,7 @@
                                         <th>No.</th>
                                         <th>News Title</th>
                                         <th>Image</th>
-                                        <th>Public</th>
+                                        <th>Show</th>
                                         <th>Actions</th>
                                     </tr>
                                 </thead>
@@ -83,31 +86,7 @@
         </div>
     </div>
 </div>
-@* <div class="bootstrap-modal">
-    <!-- Button trigger modal -->
-    <button type="button" class="btn btn-primary" data-toggle="modal" data-target="#exampleModalCenter">Launch demo
-        modal</button>
-    <!-- Modal -->
-    <div class="modal fade" id="exampleModalCenter">
-        <div class="modal-dialog modal-dialog-centered" role="document">
-            <div class="modal-content">
-                <div class="modal-header">
-                    <h5 class="modal-title">Modal title</h5>
-                    <button type="button" class="close" data-dismiss="modal"><span>&times;</span>
-                    </button>
-                </div>
-                <div class="modal-body">
-                    <p>Cras mattis consectetur purus sit amet fermentum. Cras justo odio, dapibus ac facilisis in,
-                        egestas eget quam. Morbi leo risus, porta ac consectetur ac, vestibulum at eros.</p>
-                </div>
-                <div class="modal-footer">
-                    <button type="button" class="btn btn-secondary" data-dismiss="modal">Close</button>
-                    <button type="button" class="btn btn-primary">Save changes</button>
-                </div>
-            </div>
-        </div>
-    </div>
-</div> *@
+
 @* Link CSS*@
 @section AdditionalLinkCSS {
 
@@ -143,5 +122,4 @@
     <script src="../plugins/tables/js/datatable/dataTables.bootstrap4.min.js"></script>
     <script src="../plugins/tables/js/datatable-init/datatable-basic.min.js"></script>
     <script src="~/js/blog/news.js"></script>
-
 }
