--- a/Areas/Blog/Views/ServicesBlog/Index.cshtml
+++ b/Areas/Blog/Views/ServicesBlog/Index.cshtml
@@ -1,1 +1,125 @@
-<h1>Services</h1>
+@{
+    ViewData["Title"] = "Services News Management";
+}
+<div class="container-fluid">
+    <div class="col-12 mb-30">
+        <div class="row">
+            <div class="col-lg-12">
+                <div class="card text-center">
+                    <div class="card-body card-modifed">
+                        <div class="d-flex justify-content-between align-items-center flex-wrap">
+                            <div class="status-info mb-2">
+                                <select id="news-status" class="form-select input-height" style="text-align: center;"
+                                    aria-label="Choose status news">
+                                    <option value="all">All</option>
+                                    <option value="public">Show</option>
+                                    <option value="private">Hide</option>
+                                </select>
+                                <!-- Room Number Field -->
+                                <input class="input-height input-room" type="text" id="room-number"
+                                    placeholder="Enter news name" aria-label="Nhập số phòng">
+                                <!-- Search Button -->
+                                <a href="#" class="btn btn-primary btn-custom me-2">
+                                    <i class="fas fa-search"></i>
+                                    Search
+                                </a>
+                            </div>
+                            <div class="action-buttons mb-2">
+                                @* <a asp-controller="Room" asp-action="CreateHome" class="btn btn-primary me-2">
+                                <i class="fas fa-plus"></i>
+                                Add home
+                                </a> *@
+                                @* <a href="#" class="btn btn-info me-2">
+                                <i class="fas fa-edit"></i>
+                                Enter room from excel
+                                </a> *@
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>
+    <div class="col-12 mb-30">
+        <div class="row">
+            <div class="col-lg-12">
+                <div class="card ">
+                    @* <div class="card-header">
+                    <ul class="nav nav-tabs card-header-tabs" id="tab-list">
+                    Render rental property here
+                    </ul>
+                    </div> *@
+                    <div class="card-body">
+                        <div class="d-flex justify-content-end align-items-center flex-wrap mb-3">
+                            @* <div class="status-info mb-2" id="status-info">
+                            Render status info
+                            </div> *@
+                            <div class="action-buttons mb-2" id="btn-action">
+                                @* Render action buttons *@
+                                <a asp-action="CreateServiceNews" asp-controller="ServicesBlog"
+                                    class="btn btn-primary me-2"> <i class="fas fa-plus"></i> Add </a>
+                                <a asp-action="CreateNews" asp-controller="News" class="btn btn-info me-2"> <i
+                                        class="fas fa-trash"></i> Delete </a>
+                            </div>
+                        </div>
+                        <div class="table-responsive">
+                            <table class="table table-striped table-bordered zero-configuration text-center"
+                                id="news-list">
+                                <thead>
+                                    <tr>
+                                        <th></th>
+                                        <th>No.</th>
+                                        <th>News Title</th>
+                                        <th>Image</th>
+                                        <th>Public</th>
+                                        <th>Actions</th>
+                                    </tr>
+                                </thead>
+                                <tbody>
+                                    @* Render user data *@
+                                </tbody>
+                            </table>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>
+</div>
+@* Link CSS*@
+@section AdditionalLinkCSS {
+
+    <link href="../css/site.css" rel="stylesheet">
+    <link href="../plugins/tables/css/datatable/dataTables.bootstrap4.min.css" rel="stylesheet">
+    <style>
+        #news-list_wrapper {
+            padding: 0px !important;
+        }
+
+        /* Show the first row if it exists */
+        div.table-responsive>div.dataTables_wrapper>div.row:first-child {
+            display: none !important;
+        }
+
+        .btn-delete {
+            cursor: pointer;
+        }
+
+        .modal .close {
+            border: none !important;
+            outline: none !important;
+            background: transparent !important;
+        }
+    </style>
+}
+
+@* Link Javascript*@
+@section AdditionalLinkJavascript {
+    <script src="https://code.jquery.com/jquery-3.5.1.min.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/js/bootstrap.bundle.min.js"></script>
+    <script src="../plugins/tables/js/jquery.dataTables.min.js"></script>
+    <script src="../plugins/tables/js/datatable/dataTables.bootstrap4.min.js"></script>
+    <script src="../plugins/tables/js/datatable-init/datatable-basic.min.js"></script>
+    <script src="~/js/blog/news.js"></script>
+
+}
