feat: Biding data into View CreateServiceNews

--- a/Areas/Blog/Views/News/CreateNews.cshtml
+++ b/Areas/Blog/Views/News/CreateNews.cshtml
@@ -155,6 +155,10 @@
         .modal-title {
             display: none;
         }
+
+        .note-resizebar {
+            display: none !important;
+        }
     </style>
 }
 
